--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,7 @@
 <!-- Footer -->
 <footer class="footer py-4" style="background-color: #222222; color: #fff;">
     <div class="container text-center">
-        <p class="mb-0">Powered by DIVINE G3N | Designed by Jordan. THIS IS NOT THE FINAL VERSION OF THIS WEBSITE</p>
+        <p class="mb-0">Powered by DIVINE G3N | Designed by Jordan | THIS IS NOT THE FINAL VERSION OF THIS WEBSITE</p>
         <div class="mt-3">
             <a href="https://discord.com/invite/CCSs7HBhpF" class="btn btn-outline-light btn-sm m-2">Join Our Discord</a>
         </div>
